[gd_scene load_steps=6 format=3 uid="uid://cmnrqfsktextv"]

[ext_resource type="Texture2D" uid="uid://dmmh6iqh5ouvo" path="res://Assets/Textures/title_screen_background.png" id="1_klylv"]
[ext_resource type="Script" uid="uid://c1nswdafje5rb" path="res://Scripts/ui/title_screen.gd" id="1_p3fck"]
[ext_resource type="Theme" uid="uid://347o3jmibjcx" path="res://Assets/Themes/base_theme.tres" id="1_twnyg"]
[ext_resource type="Shader" uid="uid://dfhvpjjx38han" path="res://Assets/Shaders/blur.gdshader" id="3_4gxqj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_twnyg"]
shader = ExtResource("3_4gxqj")
shader_parameter/amount = 2.265

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_twnyg")
script = ExtResource("1_p3fck")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_klylv")

[node name="ButtonContainer" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -194.0
offset_right = 194.0
offset_bottom = -44.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="PlayButton" type="Button" parent="ButtonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ContinueButton" type="Button" parent="ButtonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="ButtonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="ButtonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Blur Screen" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_twnyg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(600, 425)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -212.5
offset_right = 300.0
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "EXIT SETTINGS"

[connection signal="pressed" from="ButtonContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/QuitButton" to="." method="_on_settings_quit_button_pressed"]
